--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ body {
   margin-left: 2rem; }
 
 .search {
+  position: relative;
   flex: 0 0 40%;
   display: flex;
   align-items: center;
@@ -148,8 +149,11 @@ body {
     .search {
       order: 1;
       flex: 0 0 100%;
+      left: 0;
       background-color: var(--color-grey-light-2); } }
-  .search__input {
+  .search__kecil {
+    margin: 1.5rem 0; }
+  .search__input, .search__input__kecil {
     font-family: inherit;
     font-size: inherit;
     color: inherit;
@@ -160,14 +164,14 @@ body {
     width: 90%;
     transition: all .2s;
     margin-right: -3.5rem; }
-    .search__input:focus {
+    .search__input:focus, .search__input__kecil:focus {
       outline: none;
       width: 100%;
       background-color: var(--color-grey-light-3); }
-    .search__input::-webkit-input-placeholder {
+    .search__input::-webkit-input-placeholder, .search__input__kecil::-webkit-input-placeholder {
       font-weight: 100;
       color: var(--color-grey-light-4); }
-  .search__input:focus + .search__button {
+  .search__input:focus + .search__button, .search__input__kecil:focus + .search__button {
     background-color: var(--color-grey-light-3); }
   .search__button {
     border: none;
@@ -180,6 +184,9 @@ body {
     height: 2rem;
     width: 2rem;
     fill: var(--color-grey-dark-3); }
+
+.search__input__kecil {
+  width: 100%; }
 
 .user-nav {
   display: flex;
@@ -195,6 +202,44 @@ body {
     background-color: var(--color-grey-light-2); }
   .user-nav__icon-box {
     position: relative; }
+    .user-nav__icon-box .dropdown {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: -6rem;
+      align-items: center; }
+      .user-nav__icon-box .dropdown-content {
+        position: relative;
+        background-color: #f9f9f9;
+        width: 20rem;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        border-radius: 5%;
+        z-index: 1000;
+        padding: 1rem; }
+        .user-nav__icon-box .dropdown-content :hover {
+          background-color: #f1f1f1; }
+      .user-nav__icon-box .dropdown__notification {
+        font-size: .9rem;
+        height: 2rem;
+        width: 2rem;
+        border-radius: 50%;
+        background-color: var(--color-primary);
+        color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+      .user-nav__icon-box .dropdown__item {
+        justify-content: space-between;
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid #ccc; }
+        .user-nav__icon-box .dropdown__item a {
+          color: black;
+          padding: 2rem 1.3rem;
+          text-decoration: none;
+          display: block; }
+    .user-nav__icon-box:hover .dropdown {
+      display: block; }
   .user-nav__icon {
     height: 2.25rem;
     width: 2.25rem;
@@ -216,6 +261,40 @@ body {
     height: 3.75rem;
     border-radius: 50%;
     margin-right: 1rem; }
+  .user-nav__user {
+    position: relative; }
+    .user-nav__user .dropdown {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: -3.7rem;
+      align-items: center; }
+      .user-nav__user .dropdown__icon {
+        height: 2rem;
+        width: 2rem;
+        fill: var(--color-grey-dark-2); }
+      .user-nav__user .dropdown-content {
+        position: relative;
+        background-color: #f9f9f9;
+        width: 16rem;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        border-radius: 5%;
+        z-index: 1000;
+        padding: 1rem; }
+        .user-nav__user .dropdown-content :hover {
+          background-color: #f1f1f1; }
+      .user-nav__user .dropdown__item {
+        border-bottom: 1px solid #ccc;
+        display: flex;
+        align-items: center;
+        padding: .5rem 0; }
+        .user-nav__user .dropdown__item a {
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block; }
+    .user-nav__user:hover .dropdown {
+      display: block; }
 
 .side-nav {
   font-size: 1.4rem;
@@ -257,7 +336,7 @@ body {
     display: block;
     padding: 1.5rem 3rem;
     position: relative;
-    z-index: 10;
+    z-index: 1;
     display: flex;
     align-items: center; }
     @media only screen and (max-width: 56.25em) {
