--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -4,16 +4,23 @@
 }
 ////Search
 .search{
+    position: relative;
     // background-color: orangered;
     flex: 0 0 40%;
-
+// left: -1rem;
     display: flex;
     align-items: center;
     justify-content: center;
     @media only screen and (max-width: $bp-smallest) {
         order: 1;
         flex: 0 0 100%;
+        left: 0;
         background-color: var(--color-grey-light-2);
+    }
+
+    &__kecil{
+        margin: 1.5rem 0;
+        
     }
 
     &__input{
@@ -27,7 +34,7 @@
         width: 90%;
         transition: all .2s;
         margin-right: -3.5rem;
-
+       
         &:focus{
             outline: none;
             width: 100%;
@@ -59,6 +66,11 @@
         fill: var(--color-grey-dark-3);
     }
 }
+.search__input__kecil{
+    @extend .search__input;
+    width: 100%;
+}
+
 //user navigation
 .user-nav{
     // background-color: aquamarine;
@@ -77,7 +89,71 @@
         background-color: var(--color-grey-light-2);
     }
     &__icon-box{
-        position: relative;
+        
+    position: relative;
+
+    .dropdown {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: -6rem;
+        align-items: center;
+
+        // &__judul {
+        //     text-align: center;
+        //     margin: 7rem;
+        //     font-weight: bold;
+        //     font-size: 2rem ;
+        // }
+        
+
+        &-content {
+            position: relative;
+            // left: -3.8rem;
+            background-color: #f9f9f9;
+            width: 20rem;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            border-radius: 5%;
+            z-index: 1000;
+            padding: 1rem;
+            
+            :hover {
+                background-color: #f1f1f1;
+            }
+        }
+        &__notification{
+        font-size: .9rem;
+        height: 2rem ;
+        width: 2rem;
+        border-radius: 50%;
+        background-color: var(--color-primary);
+        color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        }
+        &__item {
+            justify-content: space-between;
+            display: flex;
+            align-items: center;
+            border-bottom: 1px solid #ccc;
+            
+            // padding: 1rem;
+        
+            a {
+                color: black;
+                padding: 2rem 1.3rem;
+                text-decoration: none;
+                display: block;
+            }
+        
+            
+        }
+    }
+    &:hover .dropdown {
+        display: block;
+    }
+
     }
     &__icon{
         height: 2.25rem;
@@ -100,9 +176,7 @@
         justify-content: center;
         align-items: center;
     }
-    &__user{
-
-    }
+    
     &__user-photo{
         height: 3.75rem;
         border-radius: 50%;
@@ -111,7 +185,62 @@
     &__user-name{
 
     }
+    &__user {
+
+            position: relative;
+            
+            .dropdown {
+                display: none;
+                position: absolute;
+                top: 100%;
+                left: -3.7rem;
+                // border: 1px solid red;
+                align-items: center;
+                
+                
+                &__icon{
+                    height: 2rem;
+                    width: 2rem;
+                    fill: var(--color-grey-dark-2);
+                }
+        
+                &-content {
+                    position: relative;
+                    // left: -3.8rem;
+                    background-color: #f9f9f9;
+                    width: 16rem;
+                    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+                    border-radius: 5%;
+                    z-index: 1000;
+                    padding: 1rem;
+                    :hover {
+                        background-color: #f1f1f1;
+                    }
+                }
+                
+                &__item {
+                    border-bottom: 1px solid #ccc;
+                    display: flex;
+                    align-items: center;
+                    padding: .5rem 0;
+                
+                    a {
+                        color: black;
+                        padding: 12px 16px;
+                        text-decoration: none;
+                        display: block;
+                    }
+                }
+            }
+        
+            &:hover .dropdown {
+                display: block;
+            }
+        
+    }
 }
+
+
 
 ///SIDE NAVV
 /// 
@@ -173,7 +302,7 @@
         display: block;
         padding: 1.5rem 3rem;
         position: relative;
-        z-index: 10;
+        z-index: 1;
 
         display: flex;
         align-items: center;
@@ -560,6 +689,8 @@
         animation: pulsate 1s infinite;
     }
 }
+
+
 
 
 
